ucaresystem (4.5.0) trusty; urgency=high

  * Complete rewrite
  * Package rename to ucaresystem
  * Timeshift integration
  * Rename exceutable to ucaresystem from ucaresystem-core
  * Automatically reboot system (configurable default is false)
  * Ask for confirmationm no wait (configurable and --yes flag)
  * Proper integration with polikit
  * Use x-teminal-emulator
  * Add remove-old-kernels tool
  * Add color output, Honor NO_COLOR (https://no-color.org/)
  * Better debian packaging
  * Use getopt, add many options
  * Add  man pages
  * Compatible with WSL, don't use pkgexec on ucaresystem script
  * Fix desktop menu file
  * Secure bash scripting
  * Remove obsolete files

 -- Giannis Tsgakatakis <jtsagata@gmail.com>  Sat, 29 Feb 2020 00:01:54 +0200

ucaresystem (4.4.0) trusty; urgency=high

  * Added pkexec, check if reboot is required, fixed Debian Jessie issue
  
 -- Salih Emin <salih-emin@ubuntu.com>  Wed, 25 Jan 2018 14:45:44 +0200