@@ -4,6 +4,6 @@ Type=Application
 Comment=All in one system maintenance
 Comment[el]=Αναβάθμιση όλα σε ένα
 Icon=ucaresystem
-Exec=launch-ucaresystem
+Exec=ucaresystem --xterm
 Terminal=false
 Categories=GNOME;GTK;System;
