@@ -17,6 +17,7 @@ Depends: apt,
          lsb-release,
          policykit-1,
          util-linux (>= 2.0),
+         sed (>= 1.0),
          distro-info
 Suggests: timeshift
 Description: All-in-one System Update and maintenance tool
