@@ -165,18 +165,11 @@
 
     <h4>Manuals</h4>
     <dl>
-        <dt><a class='man-ref' href='man/launch-ucaresystem.1.html'>launch-ucaresystem(1)</a></dt>
-        <dd>All-in-one System Update and maintenance tool "gui" version</dd>
-
         <dt><a class='man-ref' href='man/ucaresystem.8.html'>ucaresystem(8)</a></dt>
         <dd>All-in-one System Update and maintenance tool cli version</dd>
 
         <dt><a class='man-ref' href='man/remove-old-kernels.8.html'>remove-old-kernels(8)</a></dt>
         <dd>Kernel removal tool</dd>
-
-        <dt><a class='man-ref' href='man/ucaresystem-core.8.html'>ucaresystem-core(8)</a></dt>
-        <dd>Alternative name (deprecated)</dd>
-
     </dl>
 
     <h4>On the press</h4>
