@@ -1,45 +1,0 @@
-launch-ucaresystem(1) -- ucaresystem "gui" version
-==================================================
-
-## SYNOPSIS
-
-`launch-ucaresystem` [<format>...] <file>...<br>
-
-## DESCRIPTION
-
-**launch-ucaresystem** will ... 
-
-## OPTIONS
-
-These options control ...
-
-
-## Configuration options
-  * `LAUNCHER_SUDO_RUNNER`:
-    The way to get elevated privileges. Provide the full path to the executable.
-    
-    Default value `pkgexec` 
-    v
-  * `LAUNCHER_SUDO_RUNNER_OPTIONS`:
-  
-    Default value `default` 
-    
-  * `LAUNCHER_TERMINAL_EMULATOR`:
-
-    Default value `default` 
-
-  * `LAUNCHER_TLERMINAL_EMULATOR_OPTIONS`:
-  
-    Default value `default` 
-
-
-## COPYRIGHT
-
-launch-ucaresystem is Copyright (C) 2020 by Utappia http://utappia.org under GPL3 license. 
-
-On  Debian  systems,  the  complete text of the GNU General Public License can be found in
-/usr/share/common-licenses/GPL, or on the web at http://www.gnu.org/licenses/gpl.txt.
-
-## SEE ALSO
-
-ucaresystem(8)
